# openai-python-types

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: release.yml  sync.yml  tag-on-merge.yml
scripts/: sync_types.py
src/openai_types/: __init__.py  _models.py  audio_model.py  audio_response_format.py  auto_file_chunking_strategy_param.py  batch.py  batch_create_params.py  batch_error.py  batch_list_params.py  batch_request_counts.py  chat_model.py  completion.py  completion_choice.py  completion_create_params.py  completion_usage.py  container_create_params.py  container_create_response.py  container_list_params.py  container_list_response.py  container_retrieve_response.py  create_embedding_response.py  embedding.py  embedding_create_params.py  embedding_model.py  eval_create_params.py  eval_create_response.py  eval_custom_data_source_config.py  eval_delete_response.py  eval_list_params.py  eval_list_response.py  eval_retrieve_response.py  eval_stored_completions_data_source_config.py  eval_update_params.py  eval_update_response.py  file_chunking_strategy.py  file_chunking_strategy_param.py  file_content.py  file_create_params.py  file_deleted.py  file_list_params.py  (+39 more)
src/openai_types/_utils/: __init__.py  _transform.py
src/openai_types/graders/: __init__.py
src/openai_types/types/audio/: transcription.py  transcription_stream_event.py
src/openai_types/types/beta/: assistant_stream_event.py  assistant_tool.py
src/openai_types/types/chat/: chat_completion_message_tool_call.py
src/openai_types/types/conversations/: conversation_item.py  message.py  output_text_content.py
src/openai_types/types/evals/: create_eval_completions_run_data_source.py  create_eval_jsonl_run_data_source.py  run_cancel_response.py  run_create_response.py  run_list_response.py  run_retrieve_response.py
src/openai_types/types/realtime/: client_secret_create_response.py  conversation_item.py  realtime_audio_formats.py  realtime_audio_input_turn_detection.py  realtime_client_event.py  realtime_mcp_tool_call.py  realtime_server_event.py  (+3 more)
(+29 files in other folders)
