[project]
name = "openai-python-types"
version = "1.107.2"
description = "Lightweight package exposing only OpenAI's Python types as `openai_types`"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "pydantic>=2",
  "tomli; python_version<'3.11'",
  "typing-extensions>=4.7",
]

[project.urls]
Homepage = "https://github.com/zbirenbaum/openai-python-types"
Repository = "https://github.com/zbirenbaum/openai-python-types"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["openai_types*"]
